# heron

./: .actrc  .all-contributorsrc  .coderabbit.yaml  .editorconfig  .env.act.example  .env.example  .gitattributes  .gitignore  .lycheeignore  .markdownlint-cli2.jsonc  .mise.toml  .npmrc  .oxlintrc.jsonc  .prettierignore  .prettierrc.json  .prettierrc.json.README.md  .swiftlint.yml  .xcovignore  .yamllint.yml  AGENTS-PRODUCT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  DATA_CONTRACT.md  GEMINI.md  Gemfile  LEGAL_DISCLAIMER.md  Makefile  README.cn.md  README.es.md  README.ja.md  README.ko-KR.md  README.md  README.pt-BR.md  README.ru.md  README.zh-TW.md  REUSE.toml  TRADEMARK.md  (+79 more)
.claude-plugin/: marketplace.json  plugin.json
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml  labeler.yml  labels.yml  release.yml
batch/: README.md  batch-prompt.md  batch-runner.sh  pipeline-skipped.tsv  pipeline-survivors.tsv
branding/: .brand-snapshot.json  BRAND.md  COLORS.md  MASCOT.md  PRESS-KIT.md  PRESS.md  README-banner.md  REBRAND-PROCESS.md  REBRAND-PROGRESS.md  RENAME.md  SOCIAL-CARD.md  TYPOGRAPHY.md  VOICE.md  WORDMARK.md  brand.json  og-variants.json
data/: activity.jsonl  applications.md.bak  autopilot.json  pipeline.md.bak  profiles.json  states.yml
docs/: ARCHITECTURE.md  CI.md  COMMENT-STYLE.md  COMPARISON.md  CONTRIBUTORS.md  COVERAGE-GAPS.md  COVERAGE.md  CUSTOMIZATION.md  DATA_CONTRACT.md  DISCORD.md  FAQ.md  GOVERNANCE.md  INCIDENT.md  LEGAL_DISCLAIMER.md  NATIVE.md  PHILOSOPHY.md  PR-DEPLOY-PREVIEWS.md  RELEASING.md  SCRIPTS.md  SETTINGS.md  SETUP.md  STATUS_MODEL.md  TESTING.md  TRADEMARK.md  WATCH.md  native.md  phase7-verification.md  phase9-final-verification.md  plan-vs-reality-audit.md
examples/: README.md  sample-report.md
modes/: _TOKENS.md  _profile.template.md  _shared.md  apply.md  auto-pipeline.md  batch-prompt.md  batch.md  compare.md  counter-from-current.md  cover-letter.md  cross-link-audit.md  deep.md  drill-feedback.md  evaluate.md  first-90-days.md  followup.md  form-answers.md  interview-prep.md  interview-retro.md  interviewer-dossier.md  latex.md  leadership-lookup.md  linkedin-audit.md  linkedin-rewrite.md  mock-interview-turn.md  mock-interview.md  negotiation.md  oferta.md  offer-fine-print.md  outreach.md  patterns.md  pdf.md  pipeline.md  post-rejection.md  pre-call-dossier.md  (+15 more)
(+1729 files in other folders)
