# pyproject.toml — Python tooling config (ruff + future tools).
#
# Schema reference (per-tool — there's no canonical pyproject schema):
#   - [tool.ruff]       https://docs.astral.sh/ruff/configuration/
#   - PEP 518 root      https://peps.python.org/pep-0518/
#   - PEP 621 [project] https://peps.python.org/pep-0621/
#
# Validation: taplo format --check (lefthook pre-commit + CI). Run with:
#   pnpm exec taplo format pyproject.toml         # auto-fix
#   pnpm exec taplo format --check pyproject.toml # CI check
#
# Why pyproject.toml at all when there's no Python package? Two reasons:
#   1. ruff (scripts/apply/*.py, scripts/scan/*.py etc.) reads its
#      config from here.
#   2. mise's `python = "3.13.13"` doesn't create a venv; this file is
#      the natural home for Python-tool config when we add one later.

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
  ".venv",
  "node_modules",
  "data",
  "scripts/native/icons/_build",
]

[tool.ruff.lint]
# Conservative rule set. Auto-fix is OFF for unused-imports/vars so ruff's
# --fix mode doesn't strip load-bearing code (e.g. sys.path manipulation
# that has to run BEFORE a `from lib_X import ...` cross-dir import).
select = [
  "E", # pycodestyle errors
  "F", # pyflakes (unused imports/vars — see `unfixable` below)
  "W", # pycodestyle warnings
  "I", # isort (import ordering)
]
unfixable = ["F401", "F841"]

[tool.ruff.lint.per-file-ignores]
# scripts/{apply,scan,linkedin}/*.py:
#   E402 — module-level imports may appear AFTER sys.path manipulation.
#          The pattern is deliberate; see docs/DATA_CONTRACT.md
#          "Resolving paths in scripts".
#   I001 — don't reorder imports inside files that mix sys.path tweaks
#          with library imports; load order matters.
#   F401 — some files import names from playwright/jobspy for re-export
#          or for type-checking; not all are statically used.
#   F841 — pre-existing unused-locals in scraper code.
#   E501 / E741 — pre-existing style warnings inherited from upstream;
#                 these scripts predate the lint gate.
"scripts/apply/*.py" = ["E402", "I001", "F401", "F841", "E501", "E741"]
"scripts/scan/*.py" = ["E402", "I001", "F401", "F841", "E501", "E741"]
"scripts/linkedin/*.py" = ["E402", "I001", "F401", "F841", "E501", "E741"]
"scripts/lib/*.py" = ["I001", "E501", "E741"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
